fixed issue in task details where text wasn't wrapping to newline

--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -1,10 +1,6 @@
 * {
 	box-sizing: border-box;
 	user-select: none;
-
-	&:focus {
-		outline: 1px solid $button-clicked-bgc;
-	}
 }
 
 html {
