--- a/frontend/src/assets/styles/cmps/_task-details.scss
+++ b/frontend/src/assets/styles/cmps/_task-details.scss
@@ -1,6 +1,6 @@
 .task-details {
 	display: grid;
-	grid-template-columns: 20px 1fr 20px;
+	grid-template-columns: 20px 530px 20px;
 	grid-template-rows: 40px 60px 40px 1fr;
 	width: em(570px);
 	height: 100vh;
@@ -63,9 +63,12 @@
 		flex-direction: column;
 		align-items: center;
 		margin-block-start: 30px;
+
 		// max-height: 70vh;
 
 		.update-btn {
+			display: flex;
+			align-items: center;
 			background-color: $bg-clr1;
 			color: $clr0;
 			border-radius: 4px;
